<resources>
    <string name="app_name">TDC</string>
    <string name="title_activity_settings">설정</string>
    <string name="title_activity_about">정보</string>
    <string name="title_activity_license">오픈소스 라이선스</string>
    <string name="restart">재시작</string>
    <string name="restart_request">변경사항 적용을 위해 앱을 다시 시작해주세요.</string>
    <string name="takePicture">사진 찍기</string>
    <string name="permission_denied">권한이 승인되지 않았습니다.</string>
    <string name="album">앨범</string>
    <string name="upload">업로드</string>
    <string name="uploading">업로드 중…</string>
    <string name="downloading">다운로드 중…</string>
    <string name="deleting">삭제 중…</string>
    <string name="modify">수정</string>
    <string name="save">저장</string>
    <string name="load">모델 불러오기</string>
    <string name="name_setting">이름 설정</string>
    <string name="delete_warning_title">정말 삭제하시겠습니까?</string>
    <string name="delete_warning_msg">삭제하면 다시 되돌릴 수 없습니다.</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="cancel">취소</string>
    <string name="transfer_completed">전송 완료.</string>
    <string name="transfer_failed">전송 실패.</string>
    <string name="enter_name">이름을 입력해주세요.</string>
    <string name="empty_repository">저장소가 비었습니다.</string>
    <string name="network_not_connected">네트워크 연결을 확인해주세요.</string>
    <string name="exit_confirm">종료하시려면 \'뒤로\' 버튼을 한번 더 눌러주세요.</string>
    <string name="obj_not_exists">.obj 파일을 찾을 수 없습니다.</string>
    <string name="jpg_not_exists">.jpg 파일을 찾을 수 없습니다.</string>
    <string name="undo">되돌리기</string>
    <string name="change_mode">모드 변경</string>
    <string name="add">추가</string>
    <string name="confirm">확정</string>
    <string name="reset">초기화</string>
    <string name="photo_type">사진 타입</string>
    <string name="symmetry">대칭</string>
    <string name="asymmetry">비대칭</string>
    <string name="flat">평면</string>
    <string name="axis_x">X축 대칭</string>
    <string name="axis_y">Y축 대칭</string>
    <string name="saveFailed">저장을 실패했습니다.</string>

    <!-- Constance -->
    <string name="s3_bucket">imagebucket20200724</string>
    <string name="s3_bucket_resize">imagebucket20200724-resized</string>

    <!-- Preference Titles -->
    <string name="basics_header">기본</string>

    <!-- Security Preferences -->
    <string name="dark_mode_title">다크 모드</string>


    <!-- android-3D-model-viewer -->
    <string name="app_version">Version 1.0</string>
    <string name="action_settings">Settings</string>
    <!-- Activities -->
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_demo">Demo</string>
    <string name="title_activity_text">Text</string>
    <string name="title_activity_model">Model</string>
    <!-- Demo menu -->
    <string name="item">item</string>

    <string-array name="menu_items">
        <item>Load Model</item>
        <!--<item>Models</item>-->
        <item>Demo</item>
        <!--<item>Help</item>
        <item>About</item>-->
        <!--<item>GitHub</item>-->
        <item>Exit</item>
    </string-array>

    <string name="image">image</string>
    <!-- Help -->
    <string name="help_text">* Load Model: Load embedded models or from your device (you can find a lot in Internet. Just download them to your device). Please load only wavefront, stereolithography or Collada files (*.obj, *.stl, *.dae). If the model file (.obj) is referencing any materials file (*.mtl) be sure its in the same folder; same applies for texture files (*.jpg, *.bmp) being referenced in the material file.\n\n.* Demo: This is a demo of what can be done with the app. It basically loads several models to show usage of different draw modes, colors, textures and loading of files.\n\n* Help: This instructions page\n\n* About: Credits of this app.\n\n\nRenderer: Once you load a model, you can pinch to zoom, rotate the camera with your finger and rotate the screen with 2 fingers\n\nIn the action bar you will also find several buttons for toggling different draw modes like wireframe or points, enabling or disabiling lights, textures or animation.\n\nIf you need more help feel free to ask me: andresoviedo@gmail.com</string>
    <!-- About -->
    <string name="about_text">This application allows you to load 3D object models (currently only Wavefront, Stereolithography and Collada formats are supported).\n\nThe purpose of this application is to learn how to draw in android using the OpenGL 2.0 language.\n\nThe code for this application is open source and it can be found at https://github.com/andresoviedo/android-3D-model-viewer\n\nAs this is my first android app and Im still learning the OpenGL 2.0 language, it is highly probable that there are bugs; but I will try to continue improving the app.\n\nThe included models in the app were taken for free from Internet.\n\nAny comments, suggestions, contributions, complains or donations are welcome. Feel free to contact me at andresoviedo@gmail.com.\n\nFor more info about me visit http://www.andresoviedo.org</string>
    <!-- Load settings -->
    <string name="model_name">Model name</string>
    <string name="texture">Texture</string>
    <string name="invert_texture_coordinates">Invert texture coordinates</string>
    <string name="load_model">Load Model</string>

    <!-- GL Settings -->
    <string name="toggle_wireframe">Toggle wireframe</string>
    <string name="toggle_textures">Toggle textures</string>
    <string name="toggle_lights">Toggle lights</string>
    <string name="toggle_animation">Toggle animation</string>
    <!--<string name="toggle_skeleton">Toggle skeleton</string>-->
    <string name="toggle_boundingbox">Toggle bounding box</string>
    <string name="load_texture">Load texture</string>

    <!-- To review -->
    <string name="app_logo_desc">Teapot animated logo</string>
</resources>