<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:id="@+id/draw_undo"
        android:icon="@drawable/ic_baseline_undo_24"
        android:title="@string/undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/draw_mode"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/change_mode"
        app:showAsAction="always"/>
    <item
        android:id="@+id/draw_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/draw_confirmation"
        android:icon="@drawable/ic_baseline_done_24"
        android:title="@string/confirm"
        app:showAsAction="always"/>
    <item
        android:id="@+id/draw_save"
        android:icon="@drawable/ic_baseline_save_alt_24"
        android:title="@string/save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/draw_reset"
        android:icon="@drawable/ic_baseline_clear_24"
        android:title="@string/reset"
        app:showAsAction="ifRoom"/>
</menu>
